--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/chicken-negresco.html">Chicken Negresco</a></li>
+        <li><a href="recipes/egyptian-koshary.html">Egyptian Koshary</a></li>
+        <li><a href="recipes/hawawshi.html">Hawawshi</a></li>
+    </ul>
 </body>
 </html>
